cmake_minimum_required(VERSION 2.4)

include_directories(/usr/local/include)
link_directories(/usr/local/lib)
link_directories(/usr/local/lib/event2)
add_executable(seejay main.c crypto.c crypto.h util.c util.h)
target_link_libraries(seejay event)
target_link_libraries(seejay event_openssl)
target_link_libraries(seejay crypto)
target_link_libraries(seejay ssl)
